# SDiZOPROJEKTTESTY

./: CMakeLists.txt  main.cpp
Struktury/BRTree/: RBTree.cpp  RBTree.h  RBTreeTesty.cpp  RBTreeTesty.h
Struktury/Kopiec/: kopiec.cpp  kopiec.h  kopiecTesty.cpp  kopiecTesty.h
Struktury/Lista/: lista.cpp  lista.h  listaElement.cpp  listaElement.h  listaTesty.cpp  listaTesty.h
Struktury/Tablica/: tablica.cpp  tablica.h  tablicaTesty.cpp  tablicaTesty.h
