cmake_minimum_required(VERSION 3.24)
project(SDiZO)

set(CMAKE_CXX_STANDARD 17)

add_executable(SDiZO main.cpp Struktury/Tablica/tablica.cpp Struktury/Tablica/tablica.h Struktury/Tablica/tablicaTesty.cpp Struktury/Tablica/tablicaTesty.h Struktury/Lista/listaElement.cpp Struktury/Lista/listaElement.h Struktury/Lista/lista.cpp Struktury/Lista/lista.h Struktury/Kopiec/kopiec.cpp Struktury/Kopiec/kopiec.h Struktury/BRTree/RBTree.cpp Struktury/BRTree/RBTree.h Struktury/Lista/listaTesty.cpp Struktury/Lista/listaTesty.h Struktury/Kopiec/kopiecTesty.cpp Struktury/Kopiec/kopiecTesty.h Struktury/BRTree/RBTreeTesty.cpp Struktury/BRTree/RBTreeTesty.h)
